# votepy

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
tests/: bloc.py  test_bloc.py  test_greedy_monroe.py
tests/algorithms/: test_basinhopping.py
tests/fixtures/: bloc_medium.json  bloc_short.json
tests/ordinal_election/: test_ordinal_election.py
tests/preflib/: test_load.py
tests/readme/: my_bloc.py
tests/structure/: mock_integration.py  mock_without_rules.py  test_algo.py  test_impl.py  test_listing.py  test_rule.py  test_rule_impl.py  test_solve.py
tests/util/: util.py
votepy/: __init__.py  banzhaf.py  bloc.py  chamberlin-courant.py  chamberlin_courant.py  cplex_testing.py  demo.py  generic_brute_force.py  generic_greed.py  generic_ilp.py  generic_p_algorithm.py  greedy_monroe.py  gurobi_testing.py  k-borda.py  k_borda.py  ordinal_election.py  owa.py  preflib.py  rules.py  simulated_annealing.py  sntv.py  solve.py  solvers.py  visualization.py  vizualization.py
votepy/algorithms/: __init__.py  base_algorithm.py  base_ilp.py  basin_hopping.py  basinhopping.py  brute_force.py  generic_brute_force.py  generic_greedy.py  greedy.py  ilp.py  p_algorithm.py
votepy/meta/: listing.py  structure.py
votepy/rules/: README.md  __init__.py  bloc.py  bloc_impl.py  chamberlin_courant.py  chamberlin_courant_impl.py  greedy_monroe.py  greedy_monroe_impl.py  greedy_monroe_rule.py  k_borda.py  k_borda_impl.py  owa.py  owa_impl.py  owa_rule.py  sntv.py  sntv_rule.py
(+16 files in other folders)
