[metadata]
name = votepy
description = A Python library of ordinal-based committee (OBC) voting rules
author = Jan Izydorczyk, Mateusz Słuszniak, Filip Nikolow
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    votepy
install_requires =
    numpy>=1
    matplotlib>=3
    scipy>=1
    sklearn>=1
python_requires = >=3.9
package_dir =
    =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=2.0
    mypy>=0.971
    flake8>=3.9
    tox>=3.25

[options.package_data]
votepy = py.typed

[flake8]
max-line-length = 160
